# torch_timer

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE.APACHE-2.0  LICENSE.MIT  README.md  deny.toml  index.html  manifest.json  torch_timer.js  torch_timer_bg.wasm
.github/workflows/: release.yml  rust.yml
assets/: sw.js
src/: lib.rs  main.rs
